fix(program): launch program.run targets without a shell where safe
The Windows exec path routed every program.run/shortcut target through
`cmd.exe /c "..."`, so shell metacharacters (& % ^, spaces) in legitimate
paths were interpreted by cmd and broke or mislaunched the target.

Launch shell-free via ProcessBuilder argument vectors where the OS can do
it directly:
- directories -> `explorer.exe <path>` (also fixes cmd `start` mis-reading a
  quoted path as a window title)
- concrete .exe/.com files -> CreateProcess the absolute path directly
- taskkill (kill/endProgram) -> run taskkill.exe directly

The shell path is kept, on purpose, for the two cases that genuinely need it
and documented inline: association/interpreter-backed targets (.lnk, .bat,
.cmd, .msi, scripts) that CreateProcess cannot start, and free-form input
(bare PATH name, URL/protocol handler, full command line with args). The
binding comes only from the trusted local user, so this is a robustness fix,
not an injection boundary.

macOS/Linux branches already exec without a shell (open/gio-open arg vectors,
Runtime.exec tokenized rather than shell-parsed), so they are left as-is.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Q4CWZ6LJezWFkp8nduHmDJ